--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,35 +8,51 @@
     android:background="@android:color/holo_blue_light">
 
     <TextView
-        android:id="@+id/txt_BMI"
+        android:id="@+id/txt_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/bmi_calculator"
-        android:layout_centerHorizontal="true"
-        android:textSize="25sp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="20dp"/>
+        android:text="@string/height"
+        android:textSize="26sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="150dp"
+        android:layout_marginStart="70dp"/>
 
     <EditText
         android:id="@+id/et_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_BMI"
-        android:hint="@string/enter_your_height"
+        android:hint="@string/enter_the_height_cm"
         android:background="@android:color/white"
         android:layout_marginTop="150dp"
+        android:padding="5dp"
+        android:textSize="18sp"
+        android:layout_toEndOf="@+id/txt_height"
         android:layout_centerHorizontal="true"
         android:inputType="number"
         android:importantForAutofill="no" />
+
+    <TextView
+        android:id="@+id/txt_weight"
+        android:layout_below="@+id/txt_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/weight"
+        android:textSize="26sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="70dp"/>
 
     <EditText
         android:id="@+id/et_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/et_height"
-        android:hint="@string/enter_your_weight"
+        android:hint="@string/enter_the_weight_kg"
         android:background="@android:color/white"
+        android:padding="5dp"
+        android:textSize="18sp"
         android:layout_marginTop="50dp"
+        android:layout_toEndOf="@+id/txt_weight"
         android:layout_centerHorizontal="true"
         android:inputType="number"
         android:importantForAutofill="no" />
@@ -60,6 +76,6 @@
         android:layout_marginTop="50dp"
         android:text="@string/result"
         android:layout_centerHorizontal="true"
-        android:textSize="40sp"/>
+        android:textSize="30sp"/>
 
 </RelativeLayout>
