--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,13 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".SplashActivity">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Splash Page"
-        android:textColor="@color/black"
-        android:textSize="40sp"
-        android:layout_centerInParent="true"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/bmi_body_mass_index_banner_web_icon_vector_27901253"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
