--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -11,13 +11,12 @@
         android:id="@+id/txt_quest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="What is BMI ?"
+        android:text="@string/what_is_bmi"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="20sp"/>
-
 
     <TextView
         android:id="@+id/txt_def"
@@ -89,6 +88,5 @@
         android:layout_below="@id/txt_l4"
         android:layout_marginTop="60dp"
         android:layout_centerHorizontal="true"/>
-
 
 </RelativeLayout>
